apps/authelia/middleware.yaml
# Referenced from other namespaces' Ingress resources as:
#   traefik.ingress.kubernetes.io/router.middlewares: auth-authelia-forwardauth@kubernetescrd
# or from IngressRoute resources via spec.routes[].middlewares.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: auth
spec:
  forwardAuth:
    address: "http://authelia.auth.svc.cluster.local/api/verify?rd=https://auth.home.romangzz.com"
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
