apps/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: auth
spec:
  ports:
  - port: 80
    targetPort: 9091
    name: http
  selector:
    app: authelia
